# homework-app-config

./: .gitignore  flake.nix  pyproject.toml
functions/: handler.py
functions/tests/: test_handler.py
homework/: utils.py
